Replace cjson with json-c-0.12
:Release Notes:
Replace cjson with json-c and remove support for deprecated mjson.

:Detailed Notes:
Add requires for json-c, otherwise some components can fail to find
json.h included from lunaprefs.h:26, because they don't have
/usr/include/json in CFLAGS, it wasn't needed with cjson, because
includes were written as <cjson/json.h> and /usr/include was always
searched. Remove support for deprecated mjson, which isn't available
for download anymore at:
http://downloads.help.palm.com/opensource/3.0.5/mjson-1.0.1.tgz

:Testing Performed:

:QA Notes:

:Issues Addressed:
[DRD-3283] Replace cjson with json-c v0.12
[PLAT-61739] OSE:Remove cjson from webOS OSE builds

Open-webOS-DCO-1.0-Signed-off-by: Martin Jansa <martin.jansa@lge.com>
Change-Id: I45059b7bec454f5af7d489638fdbe1c61dcf8e64
Reviewed-on: http://gpro.lgsvl.com/113335
Reviewed-by: Martin Jansa <martin.jansa@lge.com>
Tested-by: Martin Jansa <martin.jansa@lge.com>

--- a/files/pkgconfig/luna-prefs.pc.in
+++ b/files/pkgconfig/luna-prefs.pc.in
@@ -22,3 +22,4 @@ Description: @WEBOS_PROJECT_SUMMARY@
 Version: @WEBOS_COMPONENT_VERSION@
 Libs: -L${libdir} -lluna-prefs -l@CMAKE_PROJECT_NAME@
 Cflags: -I${includedir}
+Requires: json-c
