Add OSS package information file
:Release Notes:
Add OSS package information file oss-pkg-info.yaml

:Detailed Notes:
Add OSS package information file

:Testing Performed:
Build successfully

:QA Notes:
N/A

:Issues Addressed:
[PLAT-109054] [System Service] Create OSS package information files
              - OSE components

Change-Id: I9e4a5b73a8a05822b9dade9fe03cd71ad475b0fb

--- a/oss-pkg-info.yaml
+++ b/oss-pkg-info.yaml
@@ -1,4 +1,4 @@
 Open Source Software Package:
-- name: webOSOSE-luna-prefs
-  source: https://github.com/webosose/luna-prefs
+- name: webOSOSE
+  source: https://github.com/webosose
   license: Apache-2.0
