Migrate to enhanced ACG
:Release Notes:
Revise enhanced security groups

:Detailed Notes:
- luna-prefs service needs to be migrated to enhanced ACG model
- Modifed the security groups and added groups.json system bus file

:Testing Performed:
Build Successful

:QA Notes:
N/A

:Issues Addressed:
[PLAT-96050] luna-prefs

Change-Id: I8ac4896f1b297a5bf0110923df5268fa639cdefe

--- a/files/sysbus/com.palm.preferences.service.role.json.in
+++ b/files/sysbus/com.palm.preferences.service.role.json.in
@@ -1,11 +1,12 @@
 {
-	"exeName":"@WEBOS_INSTALL_BINDIR@/luna-prefs-service",
-	"type": "regular",
-	"allowedNames": ["com.palm.preferences"],
-	"permissions": [
-		{
-			"service":"com.palm.preferences",
-			"outbound":[]
-		}
-	]
+    "exeName":"@WEBOS_INSTALL_BINDIR@/luna-prefs-service",
+    "trustLevel" : ["oem"],
+    "type": "regular",
+    "allowedNames": ["com.palm.preferences"],
+    "permissions": [
+        {
+            "service":"com.palm.preferences",
+            "outbound":[]
+        }
+    ]
 }
