Change service trustLevel type
:Release Notes:
Correct the service trustLevel type to string

:Detailed Notes:
- The service trustLevel set in role.json needs to be of string type
- Currently it is set as array of string
- Changed the type to string

:Testing Performed:
Build Successful. Locally Tested.

:QA Notes:
N/A

:Issues Addressed:
[PLAT-96050] luna-prefs

Signed-off-by: Manjuraehmad Momin <manjuraehmad.momin@lge.com>
Change-Id: Ifa7511133920025db57a59abac32723bccba33a6

--- a/files/sysbus/com.palm.preferences.service.role.json.in
+++ b/files/sysbus/com.palm.preferences.service.role.json.in
@@ -1,6 +1,6 @@
 {
     "exeName":"@WEBOS_INSTALL_BINDIR@/luna-prefs-service",
-    "trustLevel" : ["oem"],
+    "trustLevel" : "oem",
     "type": "regular",
     "allowedNames": ["com.palm.preferences"],
     "permissions": [
