--- a/luna-prop/CMakeLists.txt
+++ b/luna-prop/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2012-2018 LG Electronics, Inc.
+# Copyright (c) 2012-2023 LG Electronics, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -38,4 +38,7 @@ target_link_libraries(lunaprop
                       luna-prefs
                       )
 
-webos_build_program(NAME lunaprop)
+install(TARGETS lunaprop
+        DESTINATION bin
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+        GROUP_READ GROUP_EXECUTE)
