Update exe permission & sub folder permission
:Release Notes:
Update exe permission &  folder permission

:Detailed Notes:
exe lunaprop added with other exec permission
/var/preferences subfolder created with with  770

:Testing Performed:
Build Successful and locally Tested.

:QA Notes:
NA

:Issues Addressed:
[WRP-25483] Fix lunaprop permission issue

Change-Id: I58f00ba61473dc77bc5e624c19ae15edf804f56d

--- a/luna-prop/CMakeLists.txt
+++ b/luna-prop/CMakeLists.txt
@@ -41,4 +41,4 @@ target_link_libraries(lunaprop
 install(TARGETS lunaprop
         DESTINATION bin
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-        GROUP_READ GROUP_EXECUTE)
+        GROUP_READ GROUP_EXECUTE WORLD_EXECUTE)
